feat: add real settings management
